test/arrays/vass/const-checking.aliases.good
const-checking.aliases.chpl:8: In function 'main':
const-checking.aliases.chpl:10: error: illegal lvalue in assignment
const-checking.aliases.chpl:12: error: illegal lvalue in assignment
const-checking.aliases.chpl:22: error: illegal lvalue in assignment
const-checking.aliases.chpl:23: error: illegal lvalue in assignment
const-checking.aliases.chpl:24: error: illegal lvalue in assignment
const-checking.aliases.chpl:26: error: illegal lvalue in assignment
const-checking.aliases.chpl:27: error: illegal lvalue in assignment
const-checking.aliases.chpl:28: error: illegal lvalue in assignment
